# mrxbuilder

./: .gitignore  Cargo.toml  README.md  manifest-specification.md
.github/workflows/: build.yaml
docs/: README.md  input-manifest.md  output-metadata.md  usage.md
sample-input/: index.toml  reusable.toml
sample-input/emoji/flags/: flags.toml
sample-input/emoji/hands/: hands.toml
sample-input/hands/: hands.toml
sample-input/smileys/: smileys.toml
sample-input/targets/: containers.toml  debug.toml  formats.toml  metadata.toml  release.toml  sizes.toml  structures.toml
src/: logger.rs  main.rs  pack.rs  rasterise.rs  rasterize.rs
src/encode/: avif.rs  mod.rs  png.rs  png_mtpng.rs  png_oxipng.rs  webp.rs
src/load/: colormap.rs  manifest.rs  mod.rs  svg.rs  svgtree.rs  variable.rs
src/load/manifest/: mod.rs
src/process/: cache.rs  clean.rs  metadata.rs  mod.rs  package.rs  rasterize.rs
src/process/encode/: avif.rs  mod.rs  png_image.rs  png_oxipng.rs  webp.rs
