[package]
name = "mrxbuilder"
version = "0.1.0"
edition = "2021"

[profile.ci]
inherits = "release"
opt-level = 3
lto = "thin"
strip = "symbols"

[dependencies]
paris = { version = "1.5.15", features = ["macros"] }
image = { version = "0.24.6", features = ["webp-encoder"] }
ravif = "0.11.1"
resvg = "0.32.0"
tar = "0.4.38"
simplelog = "0.12.1"
mtpng = "0.3.5"
rayon = "1.7.0"
# oxipng = "8.0.0"
oxipng = { git = "https://github.com/shssoichiro/oxipng" }
ml-progress = "0.1.0"
toml = "0.7.4"
svgcleaner = "0.9.5"
atty = "0.2.14"
kdam = "0.3.0"
num_cpus = "1.15.0"
