[package]
name = "mrxbuilder"
version = "0.1.0"
edition = "2021"

[profile.ci]
inherits = "release"
opt-level = 3
lto = "thin"
strip = "symbols"

[dependencies]
rayon = "1.7.0"
num_cpus = "1.15.0"
svgdom = "0.18.0"
svgcleaner = "0.9.5"
toml = "0.7.4"
resvg = "0.32.0"
image = { version = "0.24.6", features = ["webp-encoder"] }
ravif = "0.11.1"
mtpng = "0.3.5"
# oxipng = "8.0.0"
oxipng = { git = "https://github.com/shssoichiro/oxipng" }
tar = "0.4.38"
atty = "0.2.14"
kdam = "0.3.0"
